k8s/ingress/ssok-logging/base/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssok-logging-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - os.kudong.kr
      - log.kudong.kr
      secretName: kudong-logging-tls-secret
  rules:
    - host: os.kudong.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-cluster-master
                port:
                  number: 9200
    - host: log.kudong.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
